2311 [OneClick] not correctly extracted subtitle files will be ignored. Bug #710
2310 [OneClick] fixed AVS audio processing. Bug #711
2309 [AVS Script Creator] fixed missing DAR values in the AVS script if using "Clever (TM) anamorphic encoding"


Changelog 2296 --> 2308

Features/Changes:
[AVS Script Creator] removed cropping limit
[MP4 Muxer] allow Nero & Apple Chapters styles muxing for better interoperability with players. Patch by Eli Bildirici (#66)

Enhancements/Fixes:
[AVS Script Creator] added detailed analysis result to the log
[AVS Script Creator] fixed "TDeint (with EDI + BOB)"
[AVS Script Creator] fixed not applying film when manually choosing "Partially film"
[AVS Script Creator] fixed recreating the index file during "Analyse" if using FFMS with a non-default index file location
[AVS Script Creator] fixed wrong resize values in some cases if using cropping without anamorphic encoding
[MediaInfo] fixed wrong aspect ratio if using anamorphic AVS files
[MediaInfo] fixed wrong aspect ratio in some cases
[MKV Demuxer] fixed wrong detection of errors if file name contains "error"
[MP4 Muxer] avoid quote truncation within Chapters Names. Patch by Eli Bildirici (#66)
[MP4 Muxer] cosmetic - "disable" instead of "disabled" parameter


Changelog 2287 --> 2296

Features/Changes:
- added support for Apple TV & iPad in the MP4 muxer

Enhancements/Fixes:
[AVS Cutter] fixed not fading to black
[AVS Script Creator] fixed "Clever (TM) anamorphic encoding" if using "Encode non-mod 16"
[AVS Script Creator] removed "Successfully converted to YV12" message
[M2TS Muxer] disabled pure TrueHD as it is not supported by tsMuxeR
[OneClick] fixed some "index out of bounds" errors. Bug #703 + #707
[OneClick] only supported subtitle tracks will be added
[x264] fixed --crf and --partitions not set to default settings for new MeGUI installations


Changelog 2237 --> 2287

Features/Changes:
- enhanced AVS Script Creator (read details in the block below) 